# graphql-ws

./: .gitignore  .isort.cfg  .travis.yml  AUTHORS.rst  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.md  README.rst  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
examples/: aio.py  flask_app.py  schema.py
examples/aiohttp/: app.py  requirements.txt  schema.py  template.py
examples/django_channels2/: Pipfile  manage.py
examples/django_channels2/django_channels2/: routing.py  schema.py  settings.py  urls.py  wsgi.py
examples/django_subscriptions/: manage.py  requirements.txt
examples/django_subscriptions/django_subscriptions/: asgi.py  routing.py  schema.py  settings.py  template.py  urls.py  wsgi.py
examples/flask_gevent/: app.py  flask_app.py  requirements.txt  schema.py  template.py
examples/tornado/: app.py  requirements.txt  schema.py  template.py
examples/websockets_lib/: app.py  requirements.txt  schema.py  template.py
graphql_aiows/: __init__.py  server.py
graphql_ws/: __init__.py  aiohttp.py  asgi.py  base.py  base_async.py  base_sync.py  constants.py  django_channels.py  gevent.py  gevent_server.py  observable_aiter.py  pubsub.py  server.py  server.ts  tornado.py  websockets_lib.py
graphql_ws/django/: __init__.py  apps.py  consumers.py  graphql_channels.py  routing.py  settings.py  subscriptions.py
graphql_ws/django/templates/graphene/: graphiql.html
graphql_ws/django/templatetags/: graphql_ws.py
graphql_ws/pubsub/: __init__.py  asyncio.py  gevent_observable.py
tests/: __init__.py  conftest.py  django_routing.py  test_aiohttp.py  test_base.py  test_base_async.py  test_django_channels.py  test_gevent.py  test_graphql_ws.py
