
[metadata]
name = graphql-ws
version = 0.3.1
description = Websocket server for GraphQL subscriptions
long_description = file: README.rst, CHANGES.rst
author = Syrus Akbary
author_email = me@syrusakbary.com
url = https://github.com/graphql-python/graphql-ws
keywords = graphql, subscriptions, graphene, websockets
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    graphql-core==2.*

[options.packages.find]
include =
    graphql_ws

[options.extras_require]
maintainer =
    bumpversion>=0.5.3
    wheel>=0.33.6
    PyYAML>=5.3,<6
dev =
    flake8>=3.7,<4
    tox>=3,<4
    Sphinx>=1.8,<2
test =
    pytest>=4,<5; python_version<"3"
    pytest>5; python_version>="3"
    pytest-cov
    pytest-asyncio; python_version>="3.4"
    graphene>=2.0,<3
    gevent
    graphene>=2.0
    graphene_django
    mock; python_version<"3"
    django==1.11.*; python_version<"3"
    channels==1.*; python_version<"3"
    django==2.*; python_version>="3"
    channels==2.*; python_version>="3"
    aiohttp; python_version>="3.5"

[bdist_wheel]
universal = 1

[bumpversion]
current_version = 0.3.1
commit = True
tag = True

[bump2version:file:setup.cfg]
search = version="{current_version}"
replace = version="{new_version}"

[bump2version:file:graphql_ws/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[flake8]
exclude =
    .tox
    .git
    .eggs
    __pycache__
    docs
max-line-length = 88
ignore = W503
